[tool.poetry]
name = "document-classification-on-wos"
version = "0.1.0"
description = ""
authors = ["Krtin Kumar <krtinkumar@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
seaborn = "^0.13.2"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
scikit-optimize = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
